@@ -130,8 +130,7 @@ public class AceTransformationService {
                     Object transformedValue = sourceValue;
                     if (mapping.getTransformationRule() != null && !mapping.getTransformationRule().isEmpty()) {
                         // If the source value is a list, apply transformation to each item
-                        if (sourceValue instanceof java.util.List) {
-                            java.util.List<?> sourceList = (java.util.List<?>) sourceValue;
+                        if (sourceValue instanceof java.util.List<?> sourceList) {
                             java.util.List<Object> transformedList = new java.util.ArrayList<>();
                             for (Object item : sourceList) {
                                 transformedList.add(applyTransformationRule(item, mapping.getTransformationRule()));
@@ -159,10 +158,9 @@ public class AceTransformationService {
             if (part.contains("[]")) {
                 // Handle array notation like "users[]"
                 String arrayKey = part.replace("[]", "");
-                if (current instanceof Map) {
-                    current = ((Map<?, ?>) current).get(arrayKey);
-                    if (current instanceof java.util.List) {
-                        java.util.List<?> list = (java.util.List<?>) current;
+                if (current instanceof Map<?, ?> map) {
+                    current = map.get(arrayKey);
+                    if (current instanceof java.util.List<?> list) {
                         
                         // If this is the last part, return the list
                         if (i == parts.length - 1) {
@@ -174,12 +172,12 @@ public class AceTransformationService {
                         String remainingPath = String.join(".", java.util.Arrays.copyOfRange(parts, i + 1, parts.length));
                         
                         for (Object item : list) {
-                            if (item instanceof Map) {
-                                Object value = getNestedValueFromMap((Map<?, ?>) item, remainingPath);
+                            if (item instanceof Map<?, ?> map) {
+                                Object value = getNestedValueFromMap(map, remainingPath);
                                 if (value != null) {
                                     // If the value is a list (from nested arrays), add all items
-                                    if (value instanceof java.util.List) {
-                                        results.addAll((java.util.List<?>) value);
+                                    if (value instanceof java.util.List<?> list1) {
+                                        results.addAll(list1);
                                     } else {
                                         results.add(value);
                                     }
@@ -191,15 +189,13 @@ public class AceTransformationService {
                 } else {
                     return null;
                 }
-            } else if (current instanceof Map) {
-                current = ((Map<?, ?>) current).get(part);
-            } else if (current instanceof java.util.List) {
-                // If we're trying to access a field on a list, collect from all items
-                java.util.List<?> list = (java.util.List<?>) current;
+            } else if (current instanceof Map<?, ?> map) {
+                current = map.get(part);
+            } else if (current instanceof java.util.List<?> list) {
                 java.util.List<Object> results = new java.util.ArrayList<>();
                 for (Object item : list) {
-                    if (item instanceof Map) {
-                        Object value = ((Map<?, ?>) item).get(part);
+                    if (item instanceof Map<?, ?> map) {
+                        Object value = map.get(part);
                         if (value != null) {
                             results.add(value);
                         }
@@ -224,10 +220,9 @@ public class AceTransformationService {
             if (part.contains("[]")) {
                 // Handle array notation in nested paths
                 String arrayKey = part.replace("[]", "");
-                if (current instanceof Map) {
-                    current = ((Map<?, ?>) current).get(arrayKey);
-                    if (current instanceof java.util.List) {
-                        java.util.List<?> list = (java.util.List<?>) current;
+                if (current instanceof Map<?, ?> map1) {
+                    current = map1.get(arrayKey);
+                    if (current instanceof java.util.List<?> list) {
                         
                         // If this is the last part, return the list
                         if (i == parts.length - 1) {
@@ -239,12 +234,12 @@ public class AceTransformationService {
                         String remainingPath = String.join(".", java.util.Arrays.copyOfRange(parts, i + 1, parts.length));
                         
                         for (Object item : list) {
-                            if (item instanceof Map) {
-                                Object value = getNestedValueFromMap((Map<?, ?>) item, remainingPath);
+                            if (item instanceof Map<?, ?> map1) {
+                                Object value = getNestedValueFromMap(map1, remainingPath);
                                 if (value != null) {
                                     // If the value is a list (from nested arrays), add all items
-                                    if (value instanceof java.util.List) {
-                                        results.addAll((java.util.List<?>) value);
+                                    if (value instanceof java.util.List<?> list1) {
+                                        results.addAll(list1);
                                     } else {
                                         results.add(value);
                                     }
@@ -256,8 +251,8 @@ public class AceTransformationService {
                 } else {
                     return null;
                 }
-            } else if (current instanceof Map) {
-                current = ((Map<?, ?>) current).get(part);
+            } else if (current instanceof Map<?, ?> map1) {
+                current = map1.get(part);
             } else {
                 return null;
             }
@@ -282,11 +277,10 @@ public class AceTransformationService {
         String finalPart = parts[parts.length - 1];
         
         // Handle array values - if the value is a list, we might want to process it
-        if (value instanceof java.util.List) {
-            java.util.List<?> listValue = (java.util.List<?>) value;
+        if (value instanceof java.util.List<?> listValue) {
             if (listValue.size() == 1) {
                 // If it's a single item list from array extraction, unwrap it
-                current.put(finalPart, listValue.get(0));
+                current.put(finalPart, listValue.getFirst());
             } else {
                 // Keep as list for multiple items
                 current.put(finalPart, value);
